package-header : fix overlapping code/icon

--- a/src/public/less/components/package-header.less
+++ b/src/public/less/components/package-header.less
@@ -458,6 +458,7 @@
 		.install-script {
 			.script-wrapper-default {
 				flex-flow: row wrap;
+				padding-right: 30px;
 
 				&:not(:nth-child(1)) {
 					margin-top: 20px;
